# aegis

./: .apply  .source  ALPHA  BUILDING  BUILDpyr  CHANGES  MANIFEST  Makefile  Makefile.in  Manifest  README  aegis.conf  aegis.spec  aegis.xpm  config  configure  openssl.LICENSE
ae-repo-ci/: arglex3.cc  arglex3.h  checkin.cc  checkin.h  main.cc  repository.cc  repository.h
aeannotate/: annotate.c  annotate.cc  annotate.h  arglex3.c  arglex3.cc  arglex3.h  line.c  line.cc  line.h  line_list.c  line_list.cc  line_list.h  list.c  list.cc  list.h  main.c  main.cc  usage.c  usage.cc  usage.h
aecomplete/: command.c  command.cc  command.h  complete.c  complete.cc  complete.h  main.c  main.cc  shell.c  shell.cc  shell.h
aecvsserver/: directo_list.cc  directo_list.h  directory.cc  directory.h  fake_version.cc  fake_version.h  file_info.cc  file_info.h  main.cc  module.cc  module.h  net.cc  net.h  request.cc  request.h  response.cc  response.h  scramble.cc  scramble.h  server.cc  server.h
aede-policy/: list.cc  list.h  main.cc  policy.cc  policy.h  usage.cc  usage.h  validation.cc  validation.h
aediff/: arglex3.cc  arglex3.h  change_id.cc  change_id.h  diff.cc  diff.h  file_version.cc  file_version.h  main.cc
aedist/: archive.cc  archive.h  arglex3.c  arglex3.cc  arglex3.h  header.c  header.h  inventory.cc  inventory.h  list.c  list.cc  list.h  main.c  main.cc  missing.cc  missing.h  move.c  move.cc  move.h  open.c  open.cc  open.h  pending.cc  pending.h  receive.c  receive.cc  receive.h  replay.cc  replay.h  send.c  send.cc  send.h  usage.cc  usage.h
aefind/: cmdline.h  cmdline.y  descend.c  descend.cc  descend.h  function.c  function.cc  function.h  lex.c  lex.cc  lex.h  main.c  main.cc  tree.c  tree.cc  tree.h
aefinish/: finish.cc  finish.h  main.cc
aefp/: main.c  main.cc
aeget/: cgi.c  cgi.cc  cgi.h  forkandwatch.c  forkandwatch.cc  forkandwatch.h  get.c  get.cc  get.h  http.c  http.cc  http.h  main.c  main.cc  rect.c  rect.cc  rect.h
aegis/: administ.c  administ.h  aeb.c  aeb.cc  aeb.h  aeca.c  aeca.cc  aeca.h  aecd.c  aecd.cc  aecd.h  aechown.c  aechown.cc  aechown.h  aeclean.c  aeclean.cc  aeclean.h  aeclone.c  aeclone.cc  aeclone.h  aecp.c  aecp.cc  aecp.h  aecpu.c  aecpu.cc  aecpu.h  aed.c  aed.cc  aed.h  aedb.c  aedb.cc  aedb.h  aedbu.c  aedbu.cc  aedbu.h  aede.c  aede.cc  aede.h  aedeu.c  aedeu.cc  (+235 more)
aegis.conf.d/: aede-policy  aeget  aemakegen  architecture  build  diff  history  new-file  rss  site.conf  test
aegrep/: arglex3.cc  arglex3.h  main.cc
aeimport/: arglex3.c  arglex3.cc  arglex3.h  change_set.c  change_set.cc  change_set.h  config_file.c  config_file.cc  config_file.h  format.c  format.cc  format.h  import.c  import.cc  import.h  main.c  main.cc  reconstruct.c  reconstruct.cc  reconstruct.h  synthesize.c  synthesize.cc  synthesize.h
aelcf/: main.cc
aelock/: list.cc  list.h  lock.cc  lock.h  main.cc  usage.cc  usage.h
aelpf/: main.cc
aels/: list.c  list.cc  list.h  main.c  main.cc  stack.c  stack.cc  stack.h
aelsf/: main.cc
aemakefile/: main.cc  printer.cc  printer.h  process.cc  process.h
aemakegen/: debug.cc  debug.h  flavour.cc  flavour.h  main.cc  process_data.cc  process_data.h  process_item.cc  process_item.h  process_queu.cc  process_queu.h  target.cc  target.h  util.cc  util.h
aemanifest/: main.cc
aemeasure/: count.c  count.cc  count.h  end_with.c  end_with.cc  end_with.h  getc_special.c  getc_special.cc  getc_special.h  lang.c  lang.cc  lang.h  main.c  main.cc
aepatch/: arglex3.c  arglex3.cc  arglex3.h  list.c  list.cc  list.h  main.c  main.cc  receive.c  receive.cc  receive.h  send.c  send.cc  send.h  slurp.c  slurp.cc  slurp.h
aepromptcmd/: main.cc
aerect/: main.c  main.cc  rect.c  rect.cc  rect.h
aereport/: main.c  main.cc
aerevml/: arglex3.cc  arglex3.h  main.cc  send.cc  send.h  usage.cc  usage.h
aesub/: main.c  main.cc
aesubunit/: arglex3.cc  arglex3.h  main.cc  subunit.cc  subunit.h
aesvt/: main.cc
aetar/: arglex3.c  arglex3.cc  arglex3.h  header.c  header.cc  header.h  list.c  list.cc  list.h  main.c  main.cc  receive.c  receive.cc  receive.h  send.c  send.cc  send.h
aexml/: main.c  main.cc  xml.cc  xml.h
aux/: ALPHA.man  BUILDING.man  BUILDpyr.man  CHANGES.1.1  CHANGES.1.2  CHANGES.1.3  CHANGES.2.2  CHANGES.2.3  CHANGES.sh  Howto.conf.in  Howto.cook  MANIFEST.sh  Makefi.file.sh  Makefile.awk  Makefile.head  Makefile.sh  README.man  config.h.in  config.h.in1  config.h.in2  configure.in  faq.roff  faq.toc.awk  lsm.roff  patch.fil.sh  patches.sh
aux/template/: c  generic  h  man  ms  report  sh  test
cklinlen/: check.c  check.cc  check.h  main.c  main.cc  module.cook
common/: abbreviate.c  abbreviate.cc  abbreviate.h  ansi.c  arglex.c  arglex.cc  arglex.h  boolean.cc  boolean.h  column_width.c  column_width.h  config.h.in  config.messy.h  debug.h  env.c  env.cc  env.h  error.c  error.cc  error.h  exeext.c  exeext.cc  exeext.h  format_elpsd.cc  format_elpsd.h  fp.c  fp.cc  fp.h  fstrcmp.c  fstrcmp.cc  fstrcmp.h  gcc-attribute.h  gettime.h  gettime.y  gmatch.c  gmatch.cc  gmatch.h  itab.c  itab.cc  itab.h  (+83 more)
conf/: AIX-3.2  ConvexOS-10  IRIX-4.0  Linux-0.99  (+11 more)
etc/: 00howto.cook  CHANGES  CHANGES.1.0  CHANGES.1.0.txt  CHANGES.1.1  CHANGES.1.1.txt  CHANGES.1.2  CHANGES.1.2.txt  CHANGES.1.3  CHANGES.1.3.txt  CHANGES.1.4  CHANGES.1.4.txt  CHANGES.2.0  CHANGES.2.0.txt  CHANGES.2.1  CHANGES.2.1.txt  CHANGES.2.2  CHANGES.2.2.txt  CHANGES.2.3  CHANGES.2.3.txt  CHANGES.3  CHANGES.3.0  CHANGES.3.0.txt  CHANGES.3.1  CHANGES.3.10  CHANGES.3.11  CHANGES.3.12  CHANGES.3.15  CHANGES.3.16  CHANGES.3.17  CHANGES.3.18  CHANGES.3.19  CHANGES.3.2  CHANGES.3.20  CHANGES.3.3  CHANGES.3.4  CHANGES.3.5  CHANGES.3.6  CHANGES.3.7  CHANGES.3.8  (+76 more)
etc/flint/: assert.h  ctype.h  errno.h  limits.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  time.h  wchar.h
etc/propaganda/: crossroads.html  diversity.html  features.html  index.html  security.html  sites.html  startup.html
etc/template/: c  cc  conf  generic  h  man  ms  po  report  sh  site.conf  test
etc/template/aemakegen/: process_item_cc  process_item_h
(+4268 files in other folders)
